[gd_scene load_steps=2 format=3 uid="uid://c3vlws8iqpvej"]

[ext_resource type="Script" uid="uid://b2qduulvak5ev" path="res://src/client/client_ui_manager.gd" id="1_de0ta"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_de0ta")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 415.0
offset_bottom = 261.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "name"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="LeaveQueue" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Leave"
